# Maze_Cpp-C

./: .gitignore  .qmlls.ini  CMakeLists.txt  README.md  README_RUS.md
materials/: instructions_for_testing_rus.md
src/: main.cpp
src/core/: CMakeLists.txt  main.cpp  maze.cpp  maze.h
src/qml/: Main.qml
src/qml/components/: Wrapper.qml
src/qml/style/: Color.qml
src/qml/ui-kit/: AppInput.qml
